# assetManagementAnalyst

./: .gitignore  pyproject.toml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
assetmanagementanalyst/: .env  __init__.py  adv_analyzer.py  analyzer.py  fund_matcher.py  launcher.py  main.py  scraper.py
